syntax = "proto3";

package webitel.chat; 

option go_package = "github.com/webitel/protos/chat/messages";

import "chat/messages/peer.proto";
import "chat/messages/chat.proto";

// Chat Message.
message Message {
  
  // Unique message identifier inside this chat.
  int64 id = 1;

  // Timestamp when this message was sent (published).
  int64 date = 2;
  
  // Sender of the message.
  Peer from = 3;

  // Conversation the message belongs to ..
  Chat chat = 4;
  
  // Chat Sender of the message, sent on behalf of a chat (member).
  Chat sender = 5;

  // Timestamp when this message was last edited.
  int64 edit = 6;

  // Kind of the message. Custom type classifier. Optional. Default: empty.
  // May be used by the client UI to extend set of general message.type(s): [ text | file ]
  string kind = 19;

  // // MIME Type of the message, e.g.: text, file, read, status etc.
  // string type = 5;
  
  // Message Text.
  string text = 7;
  
  // Message Media. Attachment. 
  File file = 8;
  
  // Context. Variables. Environment.
  map<string, string> context = 9;

  // Keyboard. Buttons. Quick Replies.
  ReplyMarkup keyboard = 10;

  // Postback. Reply Button Click[ed].
  Postback postback = 11;

}

// Media File.
message File {

  // File location
  string id = 1;

  // string url = 2;

  // Size in bytes
  int64 size = 3;

  // MIME media type
  string type = 4;

  // Filename
  string name = 5;
}

message ReplyMarkup {
  // An option used to block input to force
  // the user to respond with one of the buttons.
  bool no_input = 2;
  // Markup of button(s)
  repeated ButtonRow buttons = 1;
}

message ButtonRow {
  // Button(s) in a row
  repeated Button row = 1;
}

message Button {
  // Caption to display.
  string text = 1;
  // Type of request to share contact info
  enum Request {
    // Phone Number
    phone = 0;
    // Email Address
    email = 1;
    // General Form
    contact = 2;
    // Current Location
    location = 3;
  }
  // Type of the button.
  oneof type {
    // URL to navigate to ..
    string url = 2;
    // Postback/Callback data.
    string code = 3;
    // Request to share contact info.
    Request share = 4;
  }
}

// Postback. Reply Button Click[ed].
message Postback {
  // Message ID of the button.
  int64 mid = 1;
  // Data associated with the Button.
  string code = 2;
  // Button's display caption.
  string text = 3;
}